base calculation on  double